--- a/Udemy_Data_Science_Neural_Networks_Project.html
+++ b/Udemy_Data_Science_Neural_Networks_Project.html
@@ -16297,6 +16297,34 @@ Accuracy by just predicting &#34;Fully Paid&#34; every time: 80.38%
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="The-majority-of-people-pay-back-the-loans,-and-this-imbalance-in-the-data-makes-the-prediction-task-more-complicated.-The-current-iteration-is-a-first-solution-to-this-problem-used-in-the-Udemy-Data-Science-and-Machine-Learning-Bootcamp.">The majority of people pay back the loans, and this imbalance in the data makes the prediction task more complicated. The current iteration is a first solution to this problem used in the Udemy Data Science and Machine Learning Bootcamp.<a class="anchor-link" href="#The-majority-of-people-pay-back-the-loans,-and-this-imbalance-in-the-data-makes-the-prediction-task-more-complicated.-The-current-iteration-is-a-first-solution-to-this-problem-used-in-the-Udemy-Data-Science-and-Machine-Learning-Bootcamp.">&#182;</a></h2>
 </div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="o">!</span>jupyter nbconvert --to html Udemy_Data_Science_Neural_Networks_Project.ipynb
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
 </div>
 </body>
 
